perf(chat): 채팅 조회 쿼리와 읽음 처리를 일괄화
- 채팅방 사용자와 최근 메시지 수를 배치 조회
- 메시지 작성자와 첨부파일 N+1 조회 제거
- 읽음 상태를 MongoDB updateMulti로 일괄 갱신
- 정렬 및 커서 조회용 인덱스와 회귀 테스트 추가